# mtech-rag-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  M.tech Paper.docx  README.md  app.py  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
chroma_db/: chroma.sqlite3
data/processed/: chunked_docs.json  cleaned_docs.json  evaluation_runs.csv  extracted_docs.json  v0_metrics.csv  v1_metrics.csv  v2_metrics.csv  v3_metrics.csv  v4_metrics.csv  v5_metrics.csv
data/raw/csvs/: seat_faq_dataset.csv
src/ingestion/: create_chroma.py  prepare_data.py
src/prompts/: rag_prompt.py
src/utilities/: doc_formatter.py  evaluator.py  model_loader.py  retriever.py
src/versions/: v0_basic_rag.py  v1_fallback_rag.py  v2_reranked_rag.py  v3_verified_rag.py  v4_escalated_rag.py  v5_intelligent_rag.py
tests/: test_api.py  test_pipelines.py  test_retrieval.py
